--- a/src/pages/editShiftTransfer/editShiftTransfer.css
+++ b/src/pages/editShiftTransfer/editShiftTransfer.css
@@ -57,6 +57,7 @@
 .editShiftTransferShowHideBtn {
   display: flex;
   align-items: center;
+  justify-content: center;
   padding: 15px;
   width: 200px;
   border-radius: 5px;
